sumo/tests/netconvert/errors/XML/broken_edge/edge#id__empty1/errors.netconvert
Error: Missing edge id.
Quitting (on error).
